metadata/force-app/main/default/objects/CustomName_NYzZO__c/CustomName_NYzZO__c.object-meta.xml
<CustomObject>
    <description>Description_VgPzH</description>
    <label>CustomLabel_EKoUE</label>
    <nameField>
        <label>CustomLabel_EKoUE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_EKoUEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>