metadata/force-app/main/default/objects/CustomName_NYzZO__c/fields/CustomField_oIFBc__c.field-meta.xml
<CustomField>
    <fullName>CustomField_oIFBc__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielddYOGY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>